--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,11 +4,11 @@ spring:
     url: jdbc:mysql://localhost:3306/webExampleTwo?serverTimezone=UTC&characterEncoding=UTF-8&createDatabaseIfNotExist=true
     username: root
     password: root
-  properties:
-    hibernate:
-      dialect: org.hibernate.dialect.MySQL5Dialect
   jpa:
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQLDialect
+        format_sql: true
+    show-sql: true
     hibernate:
-      show-sql: true
-      format_sql: true
-      ddl-auto: create
+      ddl-auto: validate
